fix(error-message): typo

--- a/src/main/resources/i18n/error-message_pl.properties
+++ b/src/main/resources/i18n/error-message_pl.properties
@@ -1,4 +1,4 @@
 validation.missing-question=BEEP BOOP. W żartach wieloczęściowe wymagana jest pole question
-joke.not-found=BEEP BOOP. Morisio nie mogę... Nie mogę pobrać żartu :cry:. Nie bij
+joke.not-found=BEEP BOOP. Morisio nie mogę... Nie mogę znaleść żartu :cry:. Nie bij
 joke.unsupported-type=BEEP BOOP. Ten typ żartu nie jest wspierana
 joke.unsupported-category=BEEP BOOP. Ta kategoria żartu nie jest wspierana
