fix(mongo): added POJO mapping for joke model

--- a/src/main/resources/i18n/error-message_en.properties
+++ b/src/main/resources/i18n/error-message_en.properties
@@ -2,3 +2,4 @@ validation.missing-question=BEEP BOOP. Multi-part jokes require question field
 joke.not-found=BEEP BOOP. Morisio I can't... I can't find joke anymore :cry:. Don't hurt me
 joke.unsupported-type=BEEP BOOP. This type of joke isn't supported
 joke.unsupported-category=BEEP BOOP. This category of joke isn't supported
+joke.invalid-joke-id=BEEP BOOP. Joke id is invalid
