--- a/src/main/resources/i18n/error-message_pl.properties
+++ b/src/main/resources/i18n/error-message_pl.properties
@@ -2,3 +2,4 @@ validation.missing-question=BEEP BOOP. W żartach wieloczęściowe wymagana jest
 joke.not-found=BEEP BOOP. Morisio nie mogę... Nie mogę znaleść żartu :cry:. Nie bij
 joke.unsupported-type=BEEP BOOP. Ten typ żartu nie jest wspierana
 joke.unsupported-category=BEEP BOOP. Ta kategoria żartu nie jest wspierana
+joke.invalid-joke-id=BEEP BOOP. Id żartu jest nieporawny
