feat(transition): added general error message for any problem during execute commands

--- a/bot/src/main/resources/i18n/error-message_en.properties
+++ b/bot/src/main/resources/i18n/error-message_en.properties
@@ -3,3 +3,4 @@ joke.not-found=BEEP BOOP. Morisio I can't... I can't find joke anymore :cry:. Do
 joke.unsupported-type=BEEP BOOP. This type of joke isn't supported
 joke.unsupported-category=BEEP BOOP. This category of joke isn't supported
 joke.invalid-joke-id=BEEP BOOP. Joke id is invalid
+general.error=BEEP BOOP. Something goes wrong
