--- a/bot/src/main/resources/i18n/error-message_pl.properties
+++ b/bot/src/main/resources/i18n/error-message_pl.properties
@@ -3,3 +3,4 @@ joke.not-found=BEEP BOOP. Morisio nie mogę... Nie mogę znaleść żartu :cry:.
 joke.unsupported-type=BEEP BOOP. Ten typ żartu nie jest wspierana
 joke.unsupported-category=BEEP BOOP. Ta kategoria żartu nie jest wspierana
 joke.invalid-joke-id=BEEP BOOP. Id żartu jest nieporawny
+general.error=BEEP BOOP. Coś poszło nie tak
