feat(config): added basic config for bot

--- a/bot/src/main/resources/i18n/error-message_en.properties
+++ b/bot/src/main/resources/i18n/error-message_en.properties
@@ -4,3 +4,4 @@ joke.unsupported-type=BEEP BOOP. This type of joke isn't supported
 joke.unsupported-category=BEEP BOOP. This category of joke isn't supported
 joke.invalid-joke-id=BEEP BOOP. Joke id is invalid
 general.error=BEEP BOOP. Something goes wrong
+config.update-failed=BEEP BOOP. I didn't update my configuration
