--- a/bot/src/main/resources/i18n/error-message_pl.properties
+++ b/bot/src/main/resources/i18n/error-message_pl.properties
@@ -4,3 +4,4 @@ joke.unsupported-type=BEEP BOOP. Ten typ żartu nie jest wspierana
 joke.unsupported-category=BEEP BOOP. Ta kategoria żartu nie jest wspierana
 joke.invalid-joke-id=BEEP BOOP. Id żartu jest nieporawny
 general.error=BEEP BOOP. Coś poszło nie tak
+config.update-failed=BEEP BOOP. Nie udało mi się zaktualizować konfiguracji
