--- a/bot/src/main/resources/i18n/successful-message_en.properties
+++ b/bot/src/main/resources/i18n/successful-message_en.properties
@@ -1,1 +1,3 @@
-joke.add-joke=BEEP BOOP. Udało się dodać żart. Twój żart ma id: %s
+joke.add-joke=BEEP BOOP. I added your joke into database: Joke ID is %s
+joke.remove-joke=BEEP BOOP. I removed boring joke
+config.update-config=BEEP BOOP. I updated my configuration
