--- a/bot/src/main/resources/i18n/reaction-button_pl.properties
+++ b/bot/src/main/resources/i18n/reaction-button_pl.properties
@@ -1,2 +1,3 @@
-next-joke.label=Zabawne. Powiedz coś więcej
+next-joke.label=Zabawne. Powiedz więcej
+next-random-joke.label=Zabawne. Powiedz coś więcej
 apologies.label=Przepaszam
