feat(config): added new config: roleId and added verification if user is administrator for some commands

--- a/bot/src/main/resources/i18n/error-message_en.properties
+++ b/bot/src/main/resources/i18n/error-message_en.properties
@@ -5,3 +5,4 @@ joke.unsupported-category=BEEP BOOP. This category of joke isn't supported
 joke.invalid-joke-id=BEEP BOOP. Joke id is invalid
 general.error=BEEP BOOP. Something goes wrong
 config.update-failed=BEEP BOOP. I didn't update my configuration
+general.access-denied=BEEP BOOP. You haven't enough permission to change server's configuration
