--- a/bot/src/main/resources/i18n/error-message_pl.properties
+++ b/bot/src/main/resources/i18n/error-message_pl.properties
@@ -5,3 +5,4 @@ joke.unsupported-category=BEEP BOOP. Ta kategoria żartu nie jest wspierana
 joke.invalid-joke-id=BEEP BOOP. Id żartu jest nieporawny
 general.error=BEEP BOOP. Coś poszło nie tak
 config.update-failed=BEEP BOOP. Nie udało mi się zaktualizować konfiguracji
+general.access-denied=BEEP BOOP. Masz za małe uprawnienia by móc zmienić konfigurację systemową
